force-app/main/default/objects/Project_Dependency__c/fields/Dependant_Programs__c.field-meta.xml
<CustomField>
    <fullName>Dependant_Programs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Project Dependencies (Program)</relationshipLabel>
    <relationshipName>Dependant_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>