force-app/main/default/objects/Project_Dependency__c/fields/Dependant_Project__c.field-meta.xml
<CustomField>
    <fullName>Dependant_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependant Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Related Projects</relationshipLabel>
    <relationshipName>Project_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>