force-app/main/default/objects/Project_Dependency__c/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependency</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Dependencies (Dependency)</relationshipLabel>
    <relationshipName>Project_Dependencies1</relationshipName>
    <type>Lookup</type>
</CustomField>