force-app/main/default/objects/Project_Dependency__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Project Dependencies</relationshipLabel>
    <relationshipName>Project_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>